# Counterfactual-Fairness-in-Health-Prediction-Models-under-Data-Imbalance

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt  utils.py
datasets/: heart_disease_preprocessed.csv
utils/: counterfactuals.py  metrics.py  model_evaluation.py  visualization.py
