[project]
name = "counterfactual-fairness-in-health-prediction-models-under-data-imbalance"
version = "0.1.0"
description = ""
authors = [
    {name = "Inês Amorim",email = "inessamorim46@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "witwidget (>=1.8.1,<2.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "imblearn (>=0.0,<0.1)",
    "setuptools (>=80.9.0,<81.0.0)",
    "dice-ml (>=0.12,<0.13)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
